--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <!-- region button -->
                     <div class="col-lg-2 col-md-3 hidden-sm hidden-xs">
                         <div class="sel">
-                            <i class="glyphicon glyphicon-globe"></i><select name="region" id="region">
+                            <i class="glyphicon glyphicon-map-marker"></i><select name="region" id="region">
                                 <option value="stock">Город</option>
                                 <option value="bobruisk">Бобруйск</option>
                                 <option value="baranovichi">Барановичи</option>
@@ -162,7 +162,7 @@
                         <div id="navbarCollapse" class="collapse navbar-collapse navbar-right">
                             <ul class="nav nav-pills">
                                 <li class="active"><a href="index.html">Главная</a></li>
-                                <li><a href="#">Подать объявление</a></li>
+                                <li><a href="addproduct.html">Подать объявление</a></li>
                                 <li><a href="come.html">Войти</a></li>
                             </ul>
                         </div>
@@ -177,7 +177,7 @@
             <!-- region button -->
             <div class="visible-sm visible-xs pull-left region_s">
                 <div class="sel">
-                    <i class="glyphicon glyphicon-globe"></i><select name="region" id="region">
+                    <i class="glyphicon glyphicon-map-marker"></i><select name="region" id="region">
                         <option value="stock">Город</option>
                         <option value="bobruisk">Бобруйск</option>
                         <option value="baranovichi">Барановичи</option>
@@ -306,12 +306,12 @@
             <!-- indent -->
             <div class="clear"></div>
             <!-- left categories -->
-            <div class="col-lg-3">
+            <div class="col-lg-2">
                 <div class="panel panel-info">
                     <div class="panel-heading"><div class="sitebar-heading">Категории</div></div>
                     <div class="panel-body">
                         <ul class="list-group">
-                            <li class="list-group-item list-group-warning">
+                            <li class="list-group-item list-group-warning list_gr_it">
                                 <span class="badge">30</span>
                                 <a href="#">Товары для детей</a>
                             </li>
@@ -380,7 +380,7 @@
                 </div>
             </div>
             <!-- right-content -->
-            <div class="col-lg-9">
+            <div class="col-lg-10">
                 <div class="container-fluid">
                     <!-- block  selling new -->
                     <div class="list-group col-lg-6">
@@ -404,7 +404,8 @@
                                     <img src="assets/img/кросы.jpg" alt="Error">
                                 </div>
                                 <span>12.02.19</span>
-                                <p class="list-group-item-text">Отдам в хорошие руки</p>                                <p class="list-group-item-text descript_text">Описание описание описание 
+                                <p class="list-group-item-text">Отдам в хорошие руки</p>                                
+                                <p class="list-group-item-text descript_text">Описание описание описание 
                                         описание описание описание описание описание описание
                                         описание описание описание
                                 </p>
@@ -415,7 +416,8 @@
                                     <img src="assets/img/собака.jpg" alt="Error">
                                 </div>
                                 <span>12.02.19</span>
-                                <p class="list-group-item-text">Отдам в хорошие руки</p>                                <p class="list-group-item-text descript_text">Описание описание описание 
+                                <p class="list-group-item-text">Отдам в хорошие руки</p>                                
+                                <p class="list-group-item-text descript_text">Описание описание описание 
                                         описание описание описание описание описание описание
                                         описание описание описание
                                 </p>
@@ -426,7 +428,8 @@
                                     <img src="assets/img/колеса.jpg" alt="Error">
                                 </div>
                                 <span>12.02.19</span>
-                                <p class="list-group-item-text">Отдам в хорошие руки</p>                                <p class="list-group-item-text descript_text">Описание описание описание 
+                                <p class="list-group-item-text">Отдам в хорошие руки</p>                                
+                                <p class="list-group-item-text descript_text">Описание описание описание 
                                         описание описание описание описание описание описание
                                         описание описание описание
                                 </p>
@@ -437,7 +440,8 @@
                                     <img src="assets/img//собака.jpg" alt="Error">
                                 </div>
                                 <span>12.02.19</span>
-                                <p class="list-group-item-text">Отдам в хорошие руки</p>                                <p class="list-group-item-text descript_text">Описание описание описание 
+                                <p class="list-group-item-text">Отдам в хорошие руки</p>                                
+                                <p class="list-group-item-text descript_text">Описание описание описание 
                                         описание описание описание описание описание описание
                                         описание описание описание
                                 </p>
@@ -520,7 +524,7 @@
         <div class="container">
             <p class="text-center">
                 <a href="index.html">Главная</a>
-                <a href="index.html">Подать объявление</a>
+                <a href="addproduct.html">Подать объявление</a>
                 <a href="come.html">Войти</a>
                 <a href="index.html">О нас</a>
             </p>
