--- a/come.html
+++ b/come.html
@@ -29,7 +29,7 @@
                     <!-- region button -->
                     <div class="col-lg-2 col-md-3 hidden-sm hidden-xs">
                         <div class="sel">
-                            <i class="glyphicon glyphicon-globe"></i>
+                            <i class="glyphicon glyphicon-map-marker"></i>
                             <select name="region" id="region">
                                 <option value="stock">Город</option>
                                 <option value="bobruisk">Бобруйск</option>
@@ -163,7 +163,7 @@
                         <div id="navbarCollapse" class="collapse navbar-collapse navbar-right">
                             <ul class="nav nav-pills">
                                 <li><a href="index.html">Главная</a></li>
-                                <li><a href="#">Подать объявление</a></li>
+                                <li><a href="addproduct.html">Подать объявление</a></li>
                                 <li class="active"><a href="come.html">Войти</a></li>
                             </ul>
                         </div>
@@ -243,7 +243,7 @@
         <div class="container">
             <p class="text-center">
                 <a href="index.html">Главная</a>
-                <a href="index.html">Подать объявление</a>
+                <a href="addproduct.html">Подать объявление</a>
                 <a href="come.html">Войти</a>
                 <a href="index.html">О нас</a>
             </p>
