Change style price and date productNew

--- a/addproduct.html
+++ b/addproduct.html
@@ -380,56 +380,56 @@
                         <!-- photo 1 -->
                         <div class="col-xs-6 col-md-3">
                             <a href="#" class="thumbnail">
-                                <p class="addPhotoParag">Добавить</p>
+                                <p class="addPhotoParag"><i class="glyphicon glyphicon-plus"></i></p>
                                 <img src="assets/img/колеса.jpg" alt="Error photo one" class="hidden">
                             </a>
                         </div>
                         <!-- photo 2 -->
                         <div class="col-xs-6 col-md-3">
                             <a href="#" class="thumbnail">
-                                <p class="addPhotoParag">Добавить</p>
+                                <p class="addPhotoParag"><i class="glyphicon glyphicon-plus"></i></p>
                                 <img src="assets/img/кросы.jpg" alt="Error photo two" class="hidden">
                             </a>
                         </div>
                         <!-- photo 3 -->
                         <div class="col-xs-6 col-md-3">
                             <a href="#" class="thumbnail">
-                                <p class="addPhotoParag">Добавить</p>
+                                <p class="addPhotoParag"><i class="glyphicon glyphicon-plus"></i></p>
                                 <img src="assets/img/собака.jpg" alt="Error photo three" class="hidden">
                             </a>
                         </div>
                         <!-- photo 4 -->
                         <div class="col-xs-6 col-md-3">
                             <a href="#" class="thumbnail">
-                                <p class="addPhotoParag">Добавить</p>
+                                <p class="addPhotoParag"><i class="glyphicon glyphicon-plus"></i></p>
                                 <img src="assets/img/колеса.jpg" alt="Error photo four" class="hidden">
                             </a>
                         </div>
                         <!-- photo 5 -->
                         <div class="col-xs-6 col-md-3">
                             <a href="#" class="thumbnail">
-                                <p class="addPhotoParag">Добавить</p>
+                                <p class="addPhotoParag"><i class="glyphicon glyphicon-plus"></i></p>
                                 <img src="assets/img/колеса.jpg" alt="Error photo five" class="hidden">
                             </a>
                         </div>
                         <!-- photo 6 -->
                         <div class="col-xs-6 col-md-3">
                             <a href="#" class="thumbnail">
-                                <p class="addPhotoParag">Добавить</p>
+                                <p class="addPhotoParag"><i class="glyphicon glyphicon-plus"></i></p>
                                 <img src="assets/img/кросы.jpg" alt="Error photo six" class="hidden">
                             </a>
                         </div>
                         <!-- photo 7 -->
                         <div class="col-xs-6 col-md-3">
                             <a href="#" class="thumbnail">
-                                <p class="addPhotoParag">Добавить</p>
+                                <p class="addPhotoParag"><i class="glyphicon glyphicon-plus"></i></p>
                                 <img src="assets/img/собака.jpg" alt="Error photo seven" class="hidden">
                             </a>
                         </div>
                         <!-- photo 8 -->
                         <div class="col-xs-6 col-md-3">
                             <a href="#" class="thumbnail">
-                                <p class="addPhotoParag">Добавить</p>
+                                <p class="addPhotoParag"><i class="glyphicon glyphicon-plus"></i></p>
                                 <img src="assets/img/колеса.jpg" alt="Error photo eight" class="hidden">
                             </a>
                         </div>
