--- a/come.html
+++ b/come.html
@@ -199,6 +199,24 @@
                     </div>
                     <div id="panel2" class="tab-pane fade">
                         <form action="" role="form">
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <div class="input-group">
+                                        <span class="input-group-addon">
+                                            <input type="checkbox" aria-label="...">
+                                        </span>
+                                        <input type="text" class="form-control" aria-label="..." placeholder="Частное лицо" readonly style="">
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="input-group">
+                                        <span class="input-group-addon">
+                                            <input type="checkbox" aria-label="...">
+                                        </span>
+                                        <input type="text" class="form-control" aria-label="..." placeholder="Юридическое лицо" readonly>
+                                    </div>
+                                </div>
+                            </div>
                             <label for="namep">Имя пользователя</label>
                             <div class="input-group">
                                 <span class="input-group-addon" id="sizing-addon2"><i class="glyphicon glyphicon-font"></i></span>
