--- a/index.html
+++ b/index.html
@@ -315,63 +315,63 @@
                                 <span class="badge">30</span>
                                 <a href="#">Товары для детей</a>
                             </li>
-                            <li class="list-group-item list-group-warning">
+                            <li class="list-group-item list-group-warning list_gr_it">
                                 <span class="badge">30</span>
                                 <a href="#">Косметика</a>
                             </li>
-                            <li class="list-group-item list-group-warning">
+                            <li class="list-group-item list-group-warning list_gr_it">
                                 <span class="badge">30</span>
                                 <a href="#">Бытовая химия</a>
                             </li>
-                            <li class="list-group-item list-group-warning">
+                            <li class="list-group-item list-group-warning list_gr_it">
                                 <span class="badge">30</span>
                                 <a href="#">Техника</a>
                             </li>
-                            <li class="list-group-item list-group-warning">
+                            <li class="list-group-item list-group-warning list_gr_it">
                                 <span class="badge">30</span>
                                 <a href="#">Электроника</a>
                             </li>
-                            <li class="list-group-item list-group-warning">
+                            <li class="list-group-item list-group-warning list_gr_it">
                                 <span class="badge">30</span>
                                 <a href="#">Товары для дома</a>
                             </li>
-                            <li class="list-group-item list-group-warning">
+                            <li class="list-group-item list-group-warning list_gr_it">
                                 <span class="badge">30</span>
                                 <a href="#">Одежда</a>
                             </li>
-                            <li class="list-group-item list-group-warning">
+                            <li class="list-group-item list-group-warning list_gr_it">
                                 <span class="badge">30</span>
                                 <a href="#">Обувь</a>
                             </li>
-                            <li class="list-group-item list-group-warning">
+                            <li class="list-group-item list-group-warning list_gr_it">
                                 <span class="badge">30</span>
                                 <a href="#">Аксессуары</a>
                             </li>
-                            <li class="list-group-item list-group-warning">
+                            <li class="list-group-item list-group-warning list_gr_it">
                                 <span class="badge">30</span>
                                 <a href="#">Зоотовары</a>
                             </li>
-                            <li class="list-group-item list-group-warning">
+                            <li class="list-group-item list-group-warning list_gr_it">
                                 <span class="badge">30</span>
                                 <a href="#">Товары для авто</a>
                             </li>
-                            <li class="list-group-item list-group-warning">
+                            <li class="list-group-item list-group-warning list_gr_it">
                                 <span class="badge">30</span>
                                 <a href="#">Спорт и отдых</a>
                             </li>
-                            <li class="list-group-item list-group-warning">
+                            <li class="list-group-item list-group-warning list_gr_it">
                                 <span class="badge">30</span>
                                 <a href="#">Товары для дачи</a>
                             </li>
-                            <li class="list-group-item list-group-warning">
+                            <li class="list-group-item list-group-warning list_gr_it">
                                 <span class="badge">30</span>
                                 <a href="#">Подарки</a>
                             </li>
-                            <li class="list-group-item list-group-warning">
+                            <li class="list-group-item list-group-warning list_gr_it">
                                 <span class="badge">30</span>
                                 <a href="#">Сувениры</a>
                             </li>
-                            <li class="list-group-item list-group-warning">
+                            <li class="list-group-item list-group-warning list_gr_it">
                                 <span class="badge">30</span>
                                 <a href="#">Животные</a>
                             </li>
@@ -391,60 +391,52 @@
                                 <div class="img_block">
                                     <img src="assets/img/колеса.jpg" alt="Error" class="pull-left">
                                 </div>
-                                <span>12.02.19</span>
                                 <p class="list-group-item-text title_text">Отдам в хорошие руки</p>
-                                <p class="list-group-item-text descript_text">Описание описание описание 
-                                        описание описание описание описание описание описание
-                                        описание описание описание
+                                <p class="list-group-item-text descript_text">
+                                    Описание описание описание 
+                                    описание описание описание описание описание описание
+                                    описание описание описание
                                 </p>
+                                <span>12.02.19</span>
                             </a>
                             <a href="#" class="list-group-item">
                                 <h4 class="list-group-item-heading">Кросы</h4>
                                 <div class="img_block">
                                     <img src="assets/img/кросы.jpg" alt="Error">
                                 </div>
-                                <span>12.02.19</span>
-                                <p class="list-group-item-text">Отдам в хорошие руки</p>                                
-                                <p class="list-group-item-text descript_text">Описание описание описание 
-                                        описание описание описание описание описание описание
-                                        описание описание описание
+                                <p class="list-group-item-text title_text">Отдам в хорошие руки</p>
+                                <p class="list-group-item-text descript_text">
+                                    Описание описание описание 
+                                    описание описание описание описание описание описание
+                                    описание описание описание
                                 </p>
+                                <span>12.02.19</span>
                             </a>
                             <a href="#" class="list-group-item">
                                 <h4 class="list-group-item-heading">Собака</h4>
                                 <div class="img_block">
                                     <img src="assets/img/собака.jpg" alt="Error">
                                 </div>
-                                <span>12.02.19</span>
-                                <p class="list-group-item-text">Отдам в хорошие руки</p>                                
-                                <p class="list-group-item-text descript_text">Описание описание описание 
-                                        описание описание описание описание описание описание
-                                        описание описание описание
+                                <p class="list-group-item-text title_text">Отдам в хорошие руки</p>
+                                <p class="list-group-item-text descript_text">
+                                    Описание описание описание 
+                                    описание описание описание описание описание описание
+                                    описание описание описание
                                 </p>
+                                <span>12.02.19</span>
                             </a>
                             <a href="#" class="list-group-item">
                                 <h4 class="list-group-item-heading">Колеса</h4>
                                 <div class="img_block">
                                     <img src="assets/img/колеса.jpg" alt="Error">
                                 </div>
-                                <span>12.02.19</span>
-                                <p class="list-group-item-text">Отдам в хорошие руки</p>                                
-                                <p class="list-group-item-text descript_text">Описание описание описание 
-                                        описание описание описание описание описание описание
-                                        описание описание описание
+                                <p class="list-group-item-text title_text">Отдам в хорошие руки</p>
+                                <p class="list-group-item-text descript_text">
+                                    Описание описание описание 
+                                    описание описание описание описание описание описание
+                                    описание описание описание
                                 </p>
-                            </a>
-                            <a href="#" class="list-group-item">
-                                <h4 class="list-group-item-heading">Собака</h4>
-                                <div class="img_block">
-                                    <img src="assets/img//собака.jpg" alt="Error">
-                                </div>
                                 <span>12.02.19</span>
-                                <p class="list-group-item-text">Отдам в хорошие руки</p>                                
-                                <p class="list-group-item-text descript_text">Описание описание описание 
-                                        описание описание описание описание описание описание
-                                        описание описание описание
-                                </p>
                             </a>
                         </li>
                     </div>
@@ -457,59 +449,51 @@
                                 <div class="img_block">
                                     <img src="assets/img/колеса.jpg" alt="Error">
                                 </div>
-                                <span>12.02.19</span>
                                 <p class="list-group-item-text">Продам недорго</p>
-                                <p class="list-group-item-text">Стоимость: <b>200 бел.руб.</b></p>
-                                <p class="list-group-item-text descript_text">Описание описание описание 
-                                        описание описание описание описание описание описание
+                                <p class="list-group-item-text descript_text">
+                                    Описание описание описание 
+                                    описание описание описание описание описание описание
                                 </p>
+                                <span class="descript_price">200 бел.руб.</span>
+                                <span class="descript_buy">12.02.19</span>
                             </a>
                             <a href="#" class="list-group-item">
                                 <h4 class="list-group-item-heading">Кросы</h4>
                                 <div class="img_block">
                                     <img src="assets/img/кросы.jpg" alt="Error">
                                 </div>
-                                <span>12.02.19</span>
                                 <p class="list-group-item-text">Продам недорго</p>
-                                <p class="list-group-item-text">Стоимость: <b>200 бел.руб.</b></p>
-                                <p class="list-group-item-text descript_text">Описание описание описание 
-                                        описание описание описание описание описание описание
+                                <p class="list-group-item-text descript_text">
+                                    Описание описание описание 
+                                    описание описание описание описание описание описание
                                 </p>
+                                <span class="descript_price">200 бел.руб.</span>
+                                <span class="descript_buy">12.02.19</span>
                             <a href="#" class="list-group-item">
                                 <h4 class="list-group-item-heading">Собака</h4>
                                 <div class="img_block">
                                     <img src="assets/img/собака.jpg" alt="Error">
                                 </div>
-                                <span>12.02.19</span>
                                 <p class="list-group-item-text">Продам недорго</p>
-                                <p class="list-group-item-text">Стоимость: <b>200 бел.руб.</b></p>
-                                <p class="list-group-item-text descript_text">Описание описание описание 
-                                        описание описание описание описание описание описание
+                                <p class="list-group-item-text descript_text">
+                                    Описание описание описание 
+                                    описание описание описание описание описание описание
                                 </p>
+                                <span class="descript_price">200 бел.руб.</span>
+                                <span class="descript_buy">12.02.19</span>
                             </a>
                             <a href="#" class="list-group-item">
                                 <h4 class="list-group-item-heading">Колеса</h4>
                                 <div class="img_block">
                                     <img src="assets/img/колеса.jpg" alt="Error">
                                 </div>
-                                <span>12.02.19</span>
                                 <p class="list-group-item-text">Продам недорго</p>
-                                <p class="list-group-item-text">Стоимость: <b>200 бел.руб.</b></p>
-                                <p class="list-group-item-text descript_text">Описание описание описание 
-                                        описание описание описание описание описание описание
+                                <p class="list-group-item-text descript_text">
+                                    Описание описание описание 
+                                    описание описание описание описание описание описание
                                 </p>
-                            </a>
-                            <a href="#" class="list-group-item">
-                                <h4 class="list-group-item-heading">Собака</h4>
-                                <div class="img_block">
-                                    <img src="assets/img//собака.jpg" alt="Error">
-                                </div>
-                                <span>12.02.19</span>
-                                <p class="list-group-item-text">Продам недорго</p>
-                                <p class="list-group-item-text">Стоимость: <b>200 бел.руб.</b></p>
-                                <p class="list-group-item-text descript_text">Описание описание описание 
-                                        описание описание описание описание описание описание
-                                </p>
+                                <span class="descript_price">200 бел.руб.</span>
+                                <span class="descript_buy">12.02.19</span>
                             </a>
                         </li>
                     </div>
