Add six block new product

--- a/index.html
+++ b/index.html
@@ -438,6 +438,19 @@
                                 </p>
                                 <span>12.02.19</span>
                             </a>
+                            <a href="#" class="list-group-item">
+                                <h4 class="list-group-item-heading">Колеса</h4>
+                                <div class="img_block">
+                                    <img src="assets/img/собака.jpg" alt="Error">
+                                </div>
+                                <p class="list-group-item-text title_text">Отдам в хорошие руки</p>
+                                <p class="list-group-item-text descript_text">
+                                    Описание описание описание 
+                                    описание описание описание описание описание описание
+                                    описание описание описание
+                                </p>
+                                <span>12.02.19</span>
+                            </a>
                         </li>
                     </div>
                     <!-- block will give new  -->
@@ -486,6 +499,19 @@
                                 <h4 class="list-group-item-heading">Колеса</h4>
                                 <div class="img_block">
                                     <img src="assets/img/колеса.jpg" alt="Error">
+                                </div>
+                                <p class="list-group-item-text">Продам недорго</p>
+                                <p class="list-group-item-text descript_text">
+                                    Описание описание описание 
+                                    описание описание описание описание описание описание
+                                </p>
+                                <span class="descript_price">200 бел.руб.</span>
+                                <span class="descript_buy">12.02.19</span>
+                            </a>
+                            <a href="#" class="list-group-item">
+                                <h4 class="list-group-item-heading">Колеса</h4>
+                                <div class="img_block">
+                                    <img src="assets/img/собака.jpg" alt="Error">
                                 </div>
                                 <p class="list-group-item-text">Продам недорго</p>
                                 <p class="list-group-item-text descript_text">
