Rename id region

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                     <!-- region button -->
                     <div class="col-lg-2 col-md-3 hidden-sm hidden-xs">
                         <div class="sel">
-                            <i class="glyphicon glyphicon-map-marker"></i><select name="region" id="region">
+                            <i class="glyphicon glyphicon-map-marker"></i>
+                            <select name="region" id="region_header">
                                 <option value="stock">Город</option>
                                 <option value="bobruisk">Бобруйск</option>
                                 <option value="baranovichi">Барановичи</option>
@@ -177,7 +178,7 @@
             <!-- region button -->
             <div class="visible-sm visible-xs pull-left region_s">
                 <div class="sel">
-                    <i class="glyphicon glyphicon-map-marker"></i><select name="region" id="region">
+                    <i class="glyphicon glyphicon-map-marker"></i><select name="region" id="region_wrapper">
                         <option value="stock">Город</option>
                         <option value="bobruisk">Бобруйск</option>
                         <option value="baranovichi">Барановичи</option>
