--- a/come.html
+++ b/come.html
@@ -30,7 +30,7 @@
                     <div class="col-lg-2 col-md-3 hidden-sm hidden-xs">
                         <div class="sel">
                             <i class="glyphicon glyphicon-map-marker"></i>
-                            <select name="region" id="region">
+                            <select name="region" id="region_header">
                                 <option value="stock">Город</option>
                                 <option value="bobruisk">Бобруйск</option>
                                 <option value="baranovichi">Барановичи</option>
